# Zen7-Console-Demo

./: .env  .env.remote  .gitignore  README.md  pyproject.toml  run.sh
a2a_cli/: cli.py
docs/: quick_start.md
mcp_cli/: __init__.py  cli.py
shopping_agent/: agent.py
shopping_service/: server.py
